--- a/index_files/Page-2.css
+++ b/index_files/Page-2.css
@@ -127,6 +127,11 @@
   margin-bottom: 0;
 }
 
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
 .u-section-2 .u-text-15 {
   margin-left: 0;
   margin-right: auto;
@@ -138,4 +143,9 @@
   margin-left: 0;
   margin-right: auto;
   margin-bottom: 60px;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
